@@ -1,6 +1,6 @@
   ***   Warning: new stack size = 10000000 (9.537 Mbytes).
-[[1, 0.38224508584003564132935849918485739404 + 0.E-38*I], [1, 0.38224508584
-003564132935849918485739404 + 0.E-38*I], [0, -3/2]]
+[[1, 0.38224508584003564132935849918485739023 + 0.E-38*I], [1, 0.38224508584
+003564132935849918485739023 + 0.E-38*I], [0, -3/2]]
 [[[1], 0.69082574035845153597174938200391860974 - 0.141771150359113754753792
 96778414429232*I], [[2], 0.45862410662771988186069579649547270634], [[3], 0.
 69082574035845153597174938200391860974 + 0.141771150359113754753792967784144
@@ -53,4 +53,4 @@
 [0, 0.6000000000000000000000000000000000000000000000000000000000000000000000
 000000000000000000000000000000 + 0.20000000000000000000000000000000000000000
 00000000000000000000000000000000000000000000000000000000000*I]
-Total time spent: 396
+Total time spent: 296
