@@ -9,7 +9,7 @@
 8091011921 E107*I
 -0.0096304981549875294045330406967324266080 + 0.0104448408245333075664155335
 90425336553*I
-3.6835977616820321802351926205081189877 E-46
+3.6835977616820321802351926205081189876 E-46
 0.033148544714002591996135923592143390256
 [0.048900510708061119567239835228049522318, 0.003779352409848906478874860132
 4664148561, 0.00036008245216265865929539411577179720024, 3.76656228439249017
@@ -40,4 +40,4 @@
   ***   at top-level: eint1(0)
   ***                 ^--------
   *** eint1: domain error in eint1: x = 0
-Total time spent: 538
+Total time spent: 537
